--- a/scss/package.json
+++ b/scss/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "husky": "4",
     "normalize-scss": "^8.0.0"
   },
   "devDependencies": {
-    "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^2.0.5",
     "stylelint": "^13.6.1",
@@ -17,8 +17,12 @@
   },
   "scripts": {
     "lint": "stylelint ./**/*.scss",
-    "lint:fix": "yarn lint --fix",
-    "prepare": "husky"
+    "lint:fix": "yarn lint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
     "*.scss": "yarn lint:fix"
