--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "lint-staged": "^15.2.2",
     "prettier": "^2.0.5",
+    "sass": "^1.71.1",
     "stylelint": "^13.6.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-sass-guidelines": "^7.0.0",
@@ -17,7 +18,8 @@
   },
   "scripts": {
     "lint": "stylelint ./**/*.scss",
-    "lint:fix": "yarn lint --fix"
+    "lint:fix": "yarn lint --fix",
+    "build": "node src/scripts/build.js"
   },
   "husky": {
     "hooks": {
