--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@ds.e/react",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
+  "main": "lib/index.js",
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.2.64",
     "react": "^18.2.0",
-    "typescript": "^5.4.2"
+    "rollup": "^2.22.1",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "typescript": "^3.9.7"
+  },
+  "scripts": {
+    "build": "rollup -c",
+    "dev":"yarn build --watch"
   }
 }
