--- a/packages/scss/package.json
+++ b/packages/scss/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "lint-staged": "^15.2.2",
+    "nodemon": "^3.1.0",
     "prettier": "^2.0.5",
     "sass": "^1.71.1",
     "stylelint": "^13.6.1",
@@ -19,7 +20,8 @@
   "scripts": {
     "lint": "stylelint ./**/*.scss",
     "lint:fix": "yarn lint --fix",
-    "build": "node src/scripts/build.js"
+    "build": "node src/scripts/build.js",
+    "dev":"nodemon --watch src --exec yarn build -e scss"
   },
   "husky": {
     "hooks": {
